--- a/src/main/css/style.css
+++ b/src/main/css/style.css
@@ -365,15 +365,31 @@ a#time-button {
   background: #a6d854;
 }
 
+.application-level-color {
+  color: #a6d854;
+}
+
+#add-server {
+  display: none;
+}
+
 .log-config-change {
   font-size: 12pt;
   fill: #8da0cb;
   background: #8da0cb;
 }
 
+.config-change-color {
+  color: #8da0cb;
+}
+
 .log-election {
   fill: #fc8d62;
   background: #fc8d62;
+}
+
+.election-color {
+  color: #fc8d62;
 }
 
 .color-0{fill: #FC0FC0; background: #FC0FC0}/*pink*/
